--- a/index.html
+++ b/index.html
@@ -532,11 +532,11 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
-                            <p>research@evmnz.example.com</p>
+                            <p>ragu222@aucklanduni.ac.nz/p>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">🏢</span>
-                            <p>Construction Management Research<br>Auckland, New Zealand</p>
+                            <p>University of Auckland<br>Auckland, New Zealand</p>
                         </div>
                     </div>
                 </div>
@@ -557,8 +557,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 EVM Research Project. All rights reserved.</p>
-            <p>Research Status: 80% Complete | Last Updated: December 2024</p>
+            <p>&copy; 2025 EVM Research Project. All rights reserved.</p>
+            <p>Research Status: 80% Complete | Last Updated: May 2025</p>
         </div>
     </footer>
 
